--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins&family=Roboto&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="donation-banner">
+        <div class="banner-text">
+            <h1 id="banner-head">Let's Help Those Who Are More In Need</h1>
+            <p id="banner-para">We know that Sylhet division has been almost flooded in last month. We should work
+                together for those
+                area's
+                affected people</p>
+            <a class="link-button" target="_blank" href="">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
