2nd part commit

--- a/index.html
+++ b/index.html
@@ -17,12 +17,35 @@
     <section class="donation-banner">
         <div class="banner-text">
             <h1 id="banner-head">Let's Help Those Who Are More In Need</h1>
-            <p id="banner-para">We know that Sylhet division has been almost flooded in last month. We should work
+            <p id="first-para">We know that Sylhet division has been almost flooded in last month. We should work
                 together for those
                 area's
                 affected people</p>
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
+    </section>
+    <section class="donation-today">
+        <div>
+            <h1 class="second-head">Donate Today</h1>
+            <p id="second-para" class="font-color-second">We Care about the well-being of Bangladeshi Needy Families. It
+                is time to take Action
+                Now by Donating or
+                Volunteering. </p>
+            <div id="donation-amount" class="font-color-second">
+                <span class="exact-donation-amount">100tk</span>
+                <span class="exact-donation-amount" id="selected-amount">200tk</span>
+                <span class="exact-donation-amount">500tk</span>
+                <span class="exact-donation-amount">1000tk</span>
+                <span class="exact-donation-amount">5000tk</span>
+            </div>
+            <div>
+                <input id="other-amount" type="text" placeholder="Other Amount (Taka)">
+            </div>
+            <br>
+            <a class="link-button" target="_blank" href="">Donate Now</a>
+        </div>
+
+
     </section>
 </body>
 
