3rd part commit

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
     </section>
-    <section class="donation-today">
+    <section class="donation">
         <div>
-            <h1 class="second-head">Donate Today</h1>
-            <p id="second-para" class="font-color-second">We Care about the well-being of Bangladeshi Needy Families. It
+            <h1 class="donation-heading">Donate Today</h1>
+            <p class="donation-para para-font-color">We Care about the well-being of Bangladeshi Needy Families.
+                It
                 is time to take Action
                 Now by Donating or
                 Volunteering. </p>
@@ -44,8 +45,41 @@
             <br>
             <a class="link-button" target="_blank" href="">Donate Now</a>
         </div>
-
-
+    </section>
+    <section class="donation">
+        <div>
+            <h1 class="donation-heading">Our Donation Plan</h1>
+            <p class="donation-para para-font-color">We have plaaned to give donation in a unique way. We want to assist
+                some family
+                with food, shelter and
+                education</p>
+            <div id="our-donation-plan">
+                <div class="three-division" id="food">
+                    <img class="icon" src="icons/food.png" alt="food">
+                    <h2>Food for a family</h2>
+                    <p>Food is a basic necessity for survival and also the key to a healthy life for
+                        any lives. Without
+                        regular healthy meals children struggle to go to school, carers struggle to work and communities
+                        are
+                        left battling to survive.</p>
+                </div>
+                <div class="three-division" id="shelter">
+                    <img class="icon" src="icons/shelter.png" alt="shelter">
+                    <h2>Shelter for a family</h2>
+                    <p>After food, the second basic necessity for survival is shelter. So everyone
+                        should be ensured to
+                        live
+                        in a secured shelter. So, if you guys support us by donating, we will try our best.</p>
+                </div>
+                <div class="three-division" id="education">
+                    <img class="icon" src="icons/Frame-1.png" alt="book">
+                    <h2>Education for a child</h2>
+                    <p>By ensuring a child's education, we can decrease poverty also. Education is also
+                        a basic need. So we can ensure education for child, if you all support us to help those people.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
