4th part extra commit

--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
             </div>
         </div>
     </section>
+    <section id="registration">
+        <div id="joining">
+            <div class="joining-display" id="join-us">
+                <h1>Join Us</h1>
+            </div>
+            <div class="joining-display">
+                <h1 id="joining-heading">Registration to join as Volunteer</h1>
+                <span class="font-color-joining">To Serve Humanity</span>
+                <p id="joining-para" class="font-color-joining">Our opportunity of volunteering extends from the work of
+                    the Office to the
+                    grassroots personnel
+                    stage. We
+                    encourage people to join with us for the betterment of people. If
+                    you have self-willness to work with us, we are waiting to welcome you to our
+                    team.</p>
+                <a class="link-button" target="_blank" href="">Registration</a>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
