5th part commit

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
             </div>
         </div>
     </section>
+    <section class="donation">
+        <div>
+            <h1 class="donation-heading">Get My Updates</h1>
+            <p class="donation-para para-font-color">To get my updates, follow our website and social medias regularly.
+                Hence, you can subcribe by giving your
+                email address.</p>
+        </div>
+        <div id="update-input-div">
+            <form action="#">
+                <input id="subscribe-email" type="email" placeholder="Email">
+                <button id="subscribe-btn" type="submit">Subscribe</button>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
