--- a/index.html
+++ b/index.html
@@ -115,5 +115,9 @@
         </div>
     </section>
 </body>
+<footer id="footer-style">
+    <h1 id="footer-head">Be Humble</h1>
+    <small id="footer-para">I'm gonna do it</small>
+</footer>
 
 </html>
